--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -409,6 +409,9 @@ gEnablePowerSaveOffload=4
 #Disable RTT as recommended by QC
 gEnableRTTSupport=0
 
+# TheCrazyLex@PA limit max AP peers to 10 to prevent overloading
+gSoftApMaxPeers=10
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
