--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -648,17 +648,10 @@ on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
     write /proc/sys/net/ipv4/tcp_adv_win_scale  2
 
-service vendor.ril-daemon2 /vendor/bin/hw/rild -c 2
-    class main
-    user radio
-    group radio cache inet misc audio sdcard_r sdcard_rw diag log
-    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
-
-service charger /system/bin/chargeonlymode
+service charger /sbin/charger
     class charger
-    user system
-    group system graphics input
-    seclabel u:r:charger:s0
+    group system graphics
+    seclabel u:r:healthd:s0
 
 service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /system/vendor/etc/msm_irqbalance.conf
     class core
