--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -206,7 +206,7 @@ on boot
 # access permission for wlan
     chown system system /mnt/vendor/persist/WCNSS_qcom_wlan_nv.bin
 
-service vendor.ppd /vendor/bin/mm-pp-dpps
+service ppd /vendor/bin/mm-pp-dpps
     class late_start
     user system
     group system graphics
