--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -688,6 +688,10 @@ service vendor.move_time_data /system/bin/move_time_data.sh
     disabled
     oneshot
 
+#Set media target version
+on property:vendor.media.target.version=*
+    setprop vendor.sys.media.target.version ${vendor.media.target.version}
+
 service vendor.audio-hal-2-0 /vendor/bin/hw/android.hardware.audio@2.0-service
     override
     class hal
