--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -417,6 +417,9 @@ gSoftApMaxPeers=10
 gRoamPrefer5GHz=1
 gSelect5GHzMargin=3
 
+#Enable Power Save offload
+gEnablePowerSaveOffload=2
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
